--- a/Netflix_movies_and_TV_shows_clustering.ipynb
+++ b/Netflix_movies_and_TV_shows_clustering.ipynb
@@ -6,7 +6,7 @@
       "name": "Netflix movies and TV shows clustering.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOjfRNPyAhrdNd8gVB1v+8Y",
+      "authorship_tag": "ABX9TyMIyfD9Jfxlh4jdNR4DiBIO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4500,7 +4500,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Cluster 1 and 3 has maximum number of data points clustterd together."
+        "Cluster 1 has maximum number of data points clustterd together."
       ],
       "metadata": {
         "id": "K5zLFTQ9KnaZ"
